<resources>
    <string name="app_name">RunningApp</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="steps">Steps</string>
    <string name="time">Time</string>
    <string name="distance">Distance</string>
    <string name="calories_burned">Calories Burned</string>
    <string name="_0_00_m">0.00 M</string>
    <string name="_0_00_cal">0.00 Cal</string>
    <string name="_0">0</string>
    <string name="date_of_run">Date of run</string>
</resources>